some testing, will most likely be undone

--- a/assets/app/main-window/main-window.html
+++ b/assets/app/main-window/main-window.html
@@ -1,11 +1,32 @@
+    <!--<div class="row row-offcanvas row-offcanvas-right">
+        <div class="col-md-12">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a routerLink="/home">Home</a></li>
+                <li class="breadcrumb-item active">Courses</li>
+            </ol>
+            <router-outlet></router-outlet>
+        </div>
+        <router-outlet name="sidemenu"></router-outlet>
+    </div>-->
+
+      <div class="col-md-3">
+        <div style="border: 1px solid #111">
+          <me-source-tree>source tree</me-source-tree>
+        </div>
+      </div>
+      <div class="col-md-9 row" style="border: 1px solid #111">
+            <me-workspace>workspace a</me-workspace>
+      </div>
+
 <!--
-<div class="modal-body row">
-  <div class="col-md-3">
-    <source-tree>source tree</source-tree>
-  </div>
-  <div class="col-md-9">
-    <workspace>workspace a</workspace>
-  </div>
-</div>
+    <div class="row">
+      <div id="sidebar">
+          <span id="position"></span>
+          <div id="dragbar"></div>
+        <me-source-tree>source tree</me-source-tree>
+      </div>
+      <div id="main">
+        <me-workspace>workspace a</me-workspace>
+      </div>
+    </div>
 -->
-main window
