--- a/assets/app/workspace/workspace.html
+++ b/assets/app/workspace/workspace.html
@@ -1,1 +1,28 @@
-workspace html
+<div class="form-group col-md-12">
+    <div class="row">
+    <div class="form-inline">
+        <div class="input-group">
+        <span class="input-group-addon"> <i class="glyphicon glyphicon-play"></i></span>
+        <input type="text" class="form-control" id="commandText" placeholder="Command">
+        </div>
+    </div>
+    </div>
+    <div class="row">
+    <table class="table table-striped">
+        <TH>Team</TH>
+        <TH>Score</TH>
+        <TR>
+        <TD><B>Parkfield High Demons</B></TD>
+        <TD><B>28 to 21</B></TD>
+        </TR>
+        <TR>
+        <TD><B>Burns High Badgers</B></TD>
+        <TD><B>14 to 13</B></TD>
+        </TR>
+        <TR>
+        <TD><B>Mott High Kings</B></TD>
+        <TD><B>20 to 17</B></TD>
+        </TR>
+    </table>
+    </div>
+</div>
